# streamlit-stock-app

./: pyproject.toml
basketball/: app.py  output.csv
crypto/: app.py
penguins/: app.py  model.py  penguins_clf.pkl
sp500/: app.py
stock-app/: app.py
