[tool.poetry]
name = "stock-app"
version = "0.1.0"
description = "Short streamlit tutorial from https://www.youtube.com/watch?v=JwSS70SZdyM"
authors = ["freeCodeCamp.org"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.2.0"
yfinance = "^0.1.55"
streamlit = "^0.74.1"
seaborn = "^0.11.1"
lxml = "^4.6.2"
matplotlib = "^3.3.3"
numpy = "^1.19.5"
bs4 = "^0.0.1"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
